<resources>
    <string name="app_name">IllumiSmart</string>
    <string name="illumismart">IllumiSmart</string>
    <string name="self_assessment">Self-Assessment</string>
    <string name="home_selfassess">Evaluate the lighting condition of your workplace by answering a few questions.</string>
    <string name="measure_light_level">Measure Light Level</string>
    <string name="home_lightlevel">A quick tool to check whether your working area is too bright or too dark.</string>
    <string name="home_flicker">A quick tool to check whether there is flicker hazard.</string>
    <string name="detect_light_flicker">Detect Light Flicker</string>
    <string name="detect_glare">Detect Glare</string>
    <string name="glare_event_true">Glare Detected</string>
    <string name="glare_event_false">No Glare Detected</string>
    <string name="self_assessment_extra_name">self assessment extra name</string>
    <string name="a_quick_tool_to_check_whether_there_is_glare_hazard">A quick tool to check whether there is glare hazard.</string>
    <string name="lightlevel_guidance">Light level is an important factor in the workplace. To measure the illuminance using this function:\n\n
        1. Push \t\t\t to start recording \n
        2. Face the light sensor up \n
        3. Moving the phone horizontally and slowly around the working area \n
        4. Push \t\t\t to pause recording \n\n
        In addition:\n
        \t\t : Reset the light meter \n
        \t\t : Save the measurement data</string>
    <string name="flicker_guidance">Unsteady light may do harm to human and become safety hazards. To detect the possible flicker using this function: \n\n
        1. Face the light sensor direct to the light source \n
        2. Push \t\t\t to start detecting \n
        3. The Fluctuation Rate of the light source and whether it is a possible visible flicker will be displayed after 10 seconds \n\n
        In addition:\n
        \t\t : Reset the detector \n
        \t\t : Save the measurement data</string>
    <string name="flicker_guidance_0">No flicker event detected.</string>
    <string name="flicker_guidance_1to3">It seems this light source is a possible flicker.</string>
    <string name="flicker_guidance_3">It seems this light source is a certain visible flicker.</string>
    <string name="light_level_guidance_below">The average lighting level is below the guideline suggestions.</string>
    <string name="light_level_guidance_above">The average lighting level is above the guideline suggestions</string>
    <string name="light_level_guidance_among">The average lighting level follows the guidance.</string>
    <string name="light_level_view_details"><u>View Details</u></string>
    <string name="profile_below40_finework">According to your age and type of task being done, the recommended illuminance is:</string>
    <string name="light_level_below_suggest">If the measured average light level is under the guidance, view</string>
    <string name="light_level_below_suggest_correct"><u>Correction of Insufficient Light</u></string>
    <string name="light_level_above_suggest">If the measured average light level is above the guidance, it is suggested to conduct a glare test next.</string>
    <string name="occupation_question">Which of the following answers best describes your work type?</string>
    <string name="occupation_general_txt">Examples: Storeroom…</string>
    <string name="occupation_moderate_txt">Examples: Packing; despatch…</string>
    <string name="occupation_precise_txt">Examples: Simple assembly; locksmith’s work; winding thick wire onto spools; work on carpenter’s bench; milling…</string>
    <string name="occupation_fine_txt">Examples: Reading; writing; data entry; book-keeping; laboratory technician; assembly of fine equipment; woodworking by machine; fine work on toolmaking gig...</string>
    <string name="occupation_veryfine_txt">Examples: Technical drawing; colour proofing; adjusting and testing electrical equipement; assembling delicate electronics; watchmaking; invisible mending...</string>
    <string name="age_question">What is your age?</string>
    <string name="question1_work">Do you work in the office or industry setting?</string>
    <string name="question_select_header">Choose one of the following</string>
    <string name="question2_discomfort">Are there any signs of frequent eye discomfort (e.g. eyestrain, blurred vision…) and/or headaches?</string>
    <string name="question_back_header">Back to the Previous Question</string>
    <string name="question3_sunlight">Does your workplace have access to the natural light (sunlight) via windows?</string>
    <string name="question4_curtains">Are there blinds or curtains on windows?</string>
    <string name="question5_computer">Do you have a computer in your working area and usually work with it?</string>
    <string name="question6_monitor_position">Which of the following answers best describes your desktop monitor position relative to the windows?</string>
    <string name="question6_a">Next to a window</string>
    <string name="question6_b">In front of a window</string>
    <string name="question6_c">Face to a window</string>
    <string name="question6_d">There is no window near my monitor</string>
    <string name="question7_paper">Do you sometimes feel it is difficult to view the paper documents on the desk?</string>
    <string name="question8_vision">Are there frequent transitions of vision between extremes of light and dark or near and far during working?</string>
    <string name="question9_lightbulb">When do you replace the light bulbs?</string>
    <string name="question9_a">When they stop working</string>
    <string name="question9_b">When the light is dimming or fluctuating</string>
    <string name="question9_c">On regular schedule</string>
    <string name="question10_clean">Do you usually clean light fixtures, upper walls, ceilings and task stations?</string>
    <string name="question10_a">Yes, on regular schedule or whenever needed</string>
    <string name="question10_b">Never</string>
    <string name="question1suggest">
        Sorry, this assessment is temporarily for office workers only. Newer versions of assessment for industry settings will be updated in the future :)
    </string>
    <string name="question2suggest_a">
        In general, eye discomfort symptoms may be caused by: \n
        1. poor lighting \n
        2. glare on a computer or tablet screen \n
        3. poor quality computer or tablet screen (e.g., poor resolution, blurry image, etc.)\n
        4. improper viewing distances \n
        5. poor sitting posture \n
        6. uncorrected vision problems \n
        7. dry air \n
        8. air movement, or \n
        9. a combination of these factors \n\n
        Other examples of work-related risk factors that contribute to eye discomfort are: \n
        1. maintaining a fixed and close visual distance for a long time, \n
        2. glare from the unshaded or un-diffused lighting fixtures, \n
        3. poor lighting, involving unchanged (and unchangeable) levels of illumination,\n
        4. unsuitable workstations (dimensions and arrangement),\n
        5. low ambient humidity,\n
        6. uncorrected vision problems, and \n
        7. lack of colour variety in one\'s surroundings.\n\n
        As you go through this assessment, some of the problems above will be addressed. If the eye discomfort has not been reduced after suggested actions taken, have your eyes examined by an eye specialist or medical professional.
    </string>
    <string name="question4suggest_b">
        It is recommended to have blinds or curtains on your windows, as they can control the amount of daylight entering the workplace. Excessive amounts of daylight may cause annoying reflections, and some angles of light may cause glares. It is important to adjust the curtains positions accordingly.
    </string>
    <string name="question6suggest_b">
        Placing your monitor in front of the window is not a wise choice. When looking at the monitor, the daylight coming through the window can be a source of glare and make it difficult to see the contents on the screen. To confirm, put your hands on the top of the monitor to shield some light entering the window. If such a shield makes the contents on the screen more visible, then the glare is presented.\n\n
        As a means of eliminating window-related glare, it is suggested that you place your screen at a ninety-degree angle from all nearby windows, or else that you make use of window shades.
    </string>
    <string name="question6suggest_c">
        Facing the monitor to a window is not a wise choice. The monitor is a reflective surface and will reflect the external light source and possibly cause glare. The presence of glare is easily determined by turning off your screen. If glare is present, you will obviously see it all over your darkened screen.\n\n
        As a means of eliminating window-related glare, it is suggested that you place your screen at a ninety-degree angle from all nearby windows, or else that you make use of window shades. If you\’ve already taken all possible steps to handle the glare and find it still present, then perhaps a third-party accessory is needed. Glare and light filters are often used for this purpose.
    </string>
    <string name="question7suggest_a">
        Difficulty of seeing is usually due to insufficient light or high contrast in the visual environment. Most office work involves using the monitor and paper documents at the same time. Paper documents require a higher light level than the monitor. Glare can result from an improper match or excessive contrast in light levels between the monitor screen and the paper.\n\n
        To address this, first, check whether the documents are placed in the shadows. If so, move it away from the shadows or remove the objects that caused the shadows. If there is still insufficient light, a desk lamp (any type of soft task light) can be used to illuminate documents while avoiding excessive light near the monitor.
    </string>
    <string name="read_more_glare_txt1">
        Glare is a common lighting problem. Glare is what happens when a bright light source or reflection interferes with how you are \'seeing\' an object. In most cases, your eyes will adapt to the brightest level of light. When this adaptation happens, it becomes harder to see the details in the duller or darker areas of the work space (even though they are actually sufficiently lit!). Glare can cause annoyance and discomfort, and can actually decrease a person\'s ability to see.
    </string>
    <string name="read_more_glare_txt2">
        <li>Light reflected from polished, shiny or glossy surfaces.</li>\n
        <li>Glass on picture frames, or windows at night.</li>\n
        <li>Monitors / screens.</li>
    </string>
    <string name="read_more_glare_txt3">
        <li>Very bright light from poorly positioned light fixtures.</li>\n
        <li>Sunlight.</li>
    </string>
    <string name="read_more_glare_txt4">
        <li>Using several small low-intensity light fixtures rather than one large high-intensity light fixture.</li>\n
        <li>Using light fixtures that diffuse or concentrate light well. Indirect light fixtures or direct light fixtures with parabolic louvres are two possibilities.</li>\n
        <li>Covering bare bulbs with louvers, lenses or other devices to control light.</li>\n
        <li>Increasing the brightness of the area around the glare source.</li>\n
        <li>Positioning light fixtures to reduce reflected light that is directed toward the eyes.</li>\n
        <li>Using low gloss paper or applying flat or semi-gloss paint and matte finishes on \'offending\' surfaces. Removing highly polished and shiny objects.</li>\n
        <li>Keeping general lighting levels at recommended levels.</li>
    </string>
</resources>