<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/read_more_glare_screen"
    tools:context=".ReadMoreGlareActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarReadMoreGlare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/glare"
        android:fitsSystemWindows="true"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/read_more_glare_top_app_bar"
            style="@style/Widget.MaterialComponents.Toolbar.Surface"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/glare"
            android:elevation="0dp"
            android:fitsSystemWindows="true"
            app:title="Glare Info"
            app:titleTextColor="@color/white"
            app:navigationIcon="@drawable/back">

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarReadMoreGlare"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/read_more_glare_txt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/read_more_glare_txt1"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/read_more_glare_head1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Reflected glare is caused by"
                android:textColor="@color/glare"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/read_more_light_txt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/read_more_glare_txt2"
                android:textColor="@color/black"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/read_more_light_head2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Direct glare is caused by"
                android:textColor="@color/glare"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/read_more_light_txt3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/read_more_glare_txt3"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/read_more_light_head3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="To Correct Glare"
                android:textColor="@color/glare"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/read_more_light_txt4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8sp"
                android:text="@string/read_more_glare_txt4"
                android:textColor="@color/black"
                android:textSize="14sp" />


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>